kleinere Fehler ausgebügelt und ein wenig verschönert

--- a/Web_FIA44_User_verwaltung_Admin_Control/Views/Admin/Details.cshtml
+++ b/Web_FIA44_User_verwaltung_Admin_Control/Views/Admin/Details.cshtml
@@ -68,6 +68,6 @@
 	</div>
 </div>
 <div>
-    <a class="btn btn-outline-secondary" href="/home/update?UId=@ViewBag.UId">Ändern</a>
+    <a class="btn btn-outline-secondary" href="/home/update?UId=@Model.UId">Ändern</a>
     <a class="btn btn-outline-secondary" asp-controller="admin"  asp-action="AdminIndex">Zurück zur Liste</a>
 </div>
