--- a/Web_FIA44_User_verwaltung_Admin_Control/Views/Home/Index.cshtml
+++ b/Web_FIA44_User_verwaltung_Admin_Control/Views/Home/Index.cshtml
@@ -2,24 +2,22 @@
 		ViewData["Title"] = "Home";
 
 }
-<h1 class="display-4 text-center">User Verwaltung</h1>
-
-Willkommen auf unserer Userverwaltung!
-
-Wir freuen uns, dass Sie den Weg zu uns gefunden haben. 
-
-Was Sie hier finden:
 
 
-Um alle Funktionen unserer Webseite nutzen zu können, empfehlen wir Ihnen, sich zu registrieren oder einzuloggen.
-Die entsprechenden Links finden Sie oben in der Navigation. Einmal eingeloggt, haben Sie Zugriff auf personalisierte Inhalte und die Userverwaltung in vollem Umfang nutzen.
+<h1 class="display-4 text-secondary text-center">Willkommen auf unserer Userverwaltung!</h1>
 
-Wir sind stets bemüht, unsere Inhalte aktuell und relevant zu halten. 
-Sollten Sie Fragen oder Anregungen haben, zögern Sie nicht, uns zu kontaktieren. 
-Ihr Feedback ist uns wichtig und hilft uns, unser Angebot kontinuierlich zu verbessern.
+<p class="text-black-75 text-md-center">Wir freuen uns, dass Sie den Weg zu uns gefunden haben.</p>
+
+<p class="text-decoration-underline">Was Sie hier finden:</p>
+
+Im Rahmen der Userverwaltung können Sie als Administrator Benutzer anlegen, Details aller User einsehen diese auch bearbeiten und löschen.
+
+Ausserdem können Sie als Administrator auch die Rollen der User verwalten.
+
+Als Normalnutzer können Sie sich einloggen und Ihre eigenen Daten einsehen und bearbeiten.
+
+Um die Userverwaltung zu nutzen, müssen Sie sich registrieren und einloggen .
+Ohne Login können Sie nur diese Startseite sehen.
 
 
 Vielen Dank für Ihren Besuch und viel Spaß beim Entdecken unserer Webseite!
-
-
-
