--- a/Web_FIA44_User_verwaltung_Admin_Control/Views/Shared/_Layout.cshtml
+++ b/Web_FIA44_User_verwaltung_Admin_Control/Views/Shared/_Layout.cshtml
@@ -72,6 +72,12 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    <footer >
+    <div class="card-footer text-body-secondary text-center" >
+		Erstellt von Patrick Pompejus FIA_44
+	</div>
+</footer>
 </body>
+
 </html>
 
