--- a/Web_FIA44_User_verwaltung_Admin_Control/Views/Home/Update.cshtml
+++ b/Web_FIA44_User_verwaltung_Admin_Control/Views/Home/Update.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Update";
 }
 
-<h1>Update</h1>
 
-<h4>User</h4>
+
+<h3>Daten von @Model.Username ändern</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -40,22 +40,20 @@
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
                 <input type="file" asp-for="Image" class="form-control" />
-                
             </div>
+            <br />
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsAdmin" /> @Html.DisplayNameFor(model => model.IsAdmin)
                 </label>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-secondary" />
+				<input type="submit" value="Save" class="btn btn-secondary" />
+                <a class="btn btn-secondary" asp-controller="Admin" asp-action="AdminIndex">Zur Userverwaltung</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a class="btn btn-secondary" asp-action="Index">Zur Startseite</a>
 </div>
 
 @section Scripts {
